0.5.0
- Feature: Add data type "lodging" and allow to select records in the event records (#445)
- Change: BE editing of event records: Only show the registration-related fields if registration is enabled for this event (#575)
- Feature: Add a field "folder for registration records" to the organizer records (#465)
- Change: "Terms" should be a default field in the registration form (#574)
- Change: Add a second "terms" checkbox to the registration form (#547)
- Feature: Add record type for checkboxes in the registration form (#436)
- Feature: New BE module: event list, registration list, speaker list and organizer list (#279, #509, #543)
- Fix: Ordering of seminars doesn't work with MySQL Version 4.1.21 (#500)
- Fix: Crash of TYPO3 4.1 after setting plugin.tx_seminars.attendancesPID (#530)
- Fix: "additional_info" was in the list of allowed values for hideFields (#526)
- Fix: Fixed issue when using realURL and trying to register to an event (#476, #531)
- Fix: Crash when disabling the configuration check (#527)
- Fix: Fixed incorrectly spelled "timeframe" (#187)
- Change: Added "number of seats" and "total price" on the "my-events" list (#491)
- Fix: Added some missing entries in the static template (#493)
- Feature: Extend the template helper class so that it also works in the BE (#523)
- Feature: Added flexform field to select a single event record (#514)
- Change: Show the total price for a registration on the confirmation page (#489)
- Change: BE: Organize the seminars form with tabs (#515)
- Change: In the registration form, split the field "billing address" (#488)
- Fix: Event registration is stuck when payment methods are not shown (#508)
- Change: Hide the column "list of registrations" in the list of events for a certain topic (#482)
- Change: Made the date field linked in the list view (#481)
- Fix: Registration is stuck for events without any payment methods (#498)