@@ -70,6 +70,7 @@ CREATE TABLE tx_seminars_seminars (
 	place int(11) unsigned DEFAULT '0' NOT NULL,
 	room text NOT NULL,
 	lodgings int(11) unsigned DEFAULT '0' NOT NULL,
+	foods int(11) unsigned DEFAULT '0' NOT NULL,
 	additional_times_places text NOT NULL,
 	speakers int(11) unsigned DEFAULT '0' NOT NULL,
 	price_regular decimal(7,2) DEFAULT '0.00' NOT NULL,
@@ -328,6 +329,36 @@ CREATE TABLE tx_seminars_lodgings (
 # Table structure for table 'tx_seminars_seminars_lodgings_mm'
 #
 CREATE TABLE tx_seminars_seminars_lodgings_mm (
+	uid_local int(11) unsigned DEFAULT '0' NOT NULL,
+	uid_foreign int(11) unsigned DEFAULT '0' NOT NULL,
+	tablenames varchar(30) DEFAULT '' NOT NULL,
+	sorting int(11) unsigned DEFAULT '0' NOT NULL,
+	KEY uid_local (uid_local),
+	KEY uid_foreign (uid_foreign)
+);
+
+
+#
+# Table structure for table 'tx_seminars_foods'
+#
+CREATE TABLE tx_seminars_foods (
+	uid int(11) unsigned DEFAULT '0' NOT NULL auto_increment,
+	pid int(11) unsigned DEFAULT '0' NOT NULL,
+	tstamp int(11) unsigned DEFAULT '0' NOT NULL,
+	crdate int(11) unsigned DEFAULT '0' NOT NULL,
+	cruser_id int(11) unsigned DEFAULT '0' NOT NULL,
+	deleted tinyint(4) unsigned DEFAULT '0' NOT NULL,
+	title tinytext NOT NULL,
+
+	PRIMARY KEY (uid),
+	KEY parent (pid)
+);
+
+
+#
+# Table structure for table 'tx_seminars_seminars_foods_mm'
+#
+CREATE TABLE tx_seminars_seminars_foods_mm (
 	uid_local int(11) unsigned DEFAULT '0' NOT NULL,
 	uid_foreign int(11) unsigned DEFAULT '0' NOT NULL,
 	tablenames varchar(30) DEFAULT '' NOT NULL,
